fixed box overflow on large screens

--- a/stylehm.css
+++ b/stylehm.css
@@ -45,7 +45,7 @@
   color: black;
   text-align: left;
   width: 35%;
-  padding-left: 40px;
+  margin-left: 40px;
 }
 
 .turns {
@@ -57,6 +57,7 @@
   font-size: 2em;
   color: black;
   text-align: center;
+  margin-right: 40px;
 
 }
 
